<resources>
    <string name="app_name">Audino</string>
    <string name="share">Share</string>
    <string name="read">read</string>

    <string name="sleep_timer">Sleep Timer</string>
    <string name="sleep_timer_15">15 min</string>
    <string name="sleep_timer_30">30 min</string>
    <string name="sleep_timer_45">45 min</string>
    <string name="speed">Speed</string>

    <string name="speed_05x">0.5x</string>
    <string name="speed_1x">1x</string>
    <string name="speed_15x">1.5x</string>
    <string name="speed_2x">2x</string>
    <string name="change_the_read_mode">Change the Read mode</string>
    <string name="font_size">Font size</string>
    <string name="text_small_s">S</string>
    <string name="text_small_m">M</string>
    <string name="text_small_l">L</string>
    <string name="background_mode">Background mode</string>
    <string name="bg_light">Light</string>
    <string name="bg_dark">Dark</string>
    <string name="library">Library</string>
</resources>