<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <import type="com.example.audino.views.read.TextSizeOptions"/>
        <import type="com.example.audino.views.read.BackgroundOption"/>
        <variable
            name="vm"
            type="com.example.audino.views.read.SectionEditVm" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="80dp">

        <TextView
            android:id="@+id/tvEditInfo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/change_the_read_mode"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_margin="20dp"
            android:textSize="24sp"
            android:fontFamily="@font/gilroy_extrabold"
            android:textColor="@color/black"/>

        <TextView
            android:id="@+id/tvTextSize"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/tvEditInfo"
            app:layout_constraintStart_toStartOf="@id/tvEditInfo"
            android:layout_marginTop="10dp"
            android:text="@string/font_size"
            android:fontFamily="@font/gilroy_bold"
            android:textColor="@color/black_2"
            android:textSize="20sp"/>

        <TextView
            android:id="@+id/tvSmall"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:gravity="center"
            android:text="@string/text_small_s"
            app:layout_constraintTop_toBottomOf="@id/tvTextSize"
            app:layout_constraintStart_toStartOf="@id/tvTextSize"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:layout_marginTop="14dp"
            tools:enabled="false"
            android:onClick="@{() -> vm.textSizeOptionToggle(TextSizeOptions.TextSmall)}"
            android:enabled="@{vm.textSizeOptions != TextSizeOptions.TextSmall}"
            android:background="@drawable/bg_text_size" />

        <TextView
            android:id="@+id/tvMedium"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:gravity="center"
            android:text="@string/text_small_m"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:layout_marginTop="14dp"
            app:layout_constraintBaseline_toBaselineOf="@id/tvSmall"
            app:layout_constraintStart_toEndOf="@id/tvSmall"
            android:layout_marginStart="20dp"
            android:onClick="@{() -> vm.textSizeOptionToggle(TextSizeOptions.TextMedium)}"
            android:enabled="@{vm.textSizeOptions != TextSizeOptions.TextMedium}"
            android:background="@drawable/bg_text_size"/>

        <TextView
            android:id="@+id/tvLarge"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:gravity="center"
            android:text="@string/text_small_l"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:layout_marginTop="14dp"
            app:layout_constraintBaseline_toBaselineOf="@id/tvMedium"
            app:layout_constraintStart_toEndOf="@id/tvMedium"
            android:layout_marginStart="20dp"
            android:onClick="@{() -> vm.textSizeOptionToggle(TextSizeOptions.TextLarge)}"
            android:enabled="@{vm.textSizeOptions != TextSizeOptions.TextLarge}"
            android:background="@drawable/bg_text_size"/>

        <TextView
            android:id="@+id/tvBackground"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/background_mode"
            app:layout_constraintTop_toBottomOf="@id/tvSmall"
            app:layout_constraintStart_toStartOf="@id/tvSmall"
            android:layout_marginTop="20dp"
            android:fontFamily="@font/gilroy_bold"
            android:textColor="@color/black_2"
            android:textSize="20sp"/>

        <TextView
            android:id="@+id/tvLight"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:gravity="center"
            android:text="@string/bg_light"
            app:layout_constraintTop_toBottomOf="@id/tvBackground"
            app:layout_constraintStart_toStartOf="@id/tvBackground"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:layout_marginTop="14dp"
            tools:enabled="false"
            android:onClick="@{() -> vm.backgroundOptionToggle(BackgroundOption.BgLight)}"
            android:enabled="@{vm.bgOptions != BackgroundOption.BgLight}"
            android:background="@drawable/bg_text_size"/>

        <TextView
            android:id="@+id/tvDark"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:gravity="center"
            android:text="@string/bg_dark"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:layout_marginTop="14dp"
            android:onClick="@{() -> vm.backgroundOptionToggle(BackgroundOption.BgDark)}"
            app:layout_constraintBaseline_toBaselineOf="@id/tvLight"
            app:layout_constraintStart_toEndOf="@id/tvLight"
            android:layout_marginStart="20dp"
            android:enabled="@{vm.bgOptions != BackgroundOption.BgDark}"
            android:background="@drawable/bg_text_size"/>


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>